maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but integer literal found.
  var Tx = new Array[Int] 4
                          ^JediEscaper:4: error: ';' expected but integer literal found.
  var Ty = new Array[Int] 4
                          ^